--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,12 +3,10 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext.exoPlayerVersion = "2.19.1"
-    ext.lifecycleVersion = "2.4.0-beta01"
-    ext.annotationVersion = "1.2.0"
-    ext.workVersion = "2.7.0"
-    ext.coreVersion = "1.6.0"
-    ext.gradleVersion = "7.0.2"
-    ext.kotlinVersion = "1.9.10"
+    ext.lifecycleVersion = "2.10.0"
+    ext.annotationVersion = "1.9.1"
+    ext.workVersion = "2.11.0"
+    ext.kotlinVersion = "2.2.21"
 
     repositories {
         google()
@@ -16,7 +14,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:8.13.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
@@ -33,7 +31,7 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace 'com.jhomlala.better_player.better_player'
-    compileSdkVersion 31
+    compileSdkVersion 36
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
