--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,7 +30,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace 'com.jhomlala.better_player.better_player'
+    namespace 'com.jhomlala.better_player'
     compileSdkVersion 36
 
     compileOptions {
